# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./events";
 export * from "./team";
 export * from "./partners";
 export * from "./research";
+export * from "./linkedin";
